--- a/.github/workflows/windows.yaml
+++ b/.github/workflows/windows.yaml
@@ -11,7 +11,7 @@ jobs:
 
     strategy:
       matrix:
-        os: [windows-2019, windows-latest]
+        os: [windows-latest]
         compiler: ["--cc=clang-cl --cxx=clang-cl", "--toolchain=msvc"]
 
     steps:
@@ -23,16 +23,16 @@ jobs:
           7z x ispc.zip
           "ispc-v1.18.0-windows/bin" >> $env:GITHUB_PATH
 
+      - uses: xmake-io/github-action-setup-xmake@v1
+        with:
+          xmake-version: latest
+
       - name: Cache Xmake Package
         id: cache-xmake-package
         uses: actions/cache@v3
         with:
           path: C:/Users/runneradmin/AppData/Local/.xmake/packages
           key: ${{ runner.os }}-packages
-
-      - uses: xmake-io/github-action-setup-xmake@v1
-        with:
-          xmake-version: latest
 
       - name: Config
         run: |
