⚡️ imporve ecs performence

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -22,7 +22,7 @@
             ],
             "console": "externalTerminal",
             "logging": {
-                "moduleLoad": true
+                "moduleLoad": false
             }
         }
     ]
