--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
 assets/** filter=lfs diff=lfs merge=lfs -text
 assets/shaders/** filter= diff= merge= text
+assets/materials/*.json filter= diff= merge= text
+assets/utils/*.json filter= diff= merge= text
