--- a/.github/workflows/windows.yaml
+++ b/.github/workflows/windows.yaml
@@ -32,7 +32,7 @@ jobs:
         id: cache-xmake-package
         uses: actions/cache@v3
         with:
-          path: C:/Users/runneradmin/AppData/Local/.xmake/packages
+          path: ~\AppData\Local\.xmake\packages
           key: ${{ runner.os }}-packages
 
       - name: Config
