--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -101,11 +101,11 @@
     },
     "xmake.compileCommandsDirectory": "${workspaceRoot}/build",
     "C_Cpp.intelliSenseEngine": "Disabled",
-    "testMate.cpp.test.workingDirectory": "${workspaceFolder}",
     "clangd.arguments": [
         "-j=8",
         "--pch-storage=memory"
     ],
+    "testMate.cpp.test.workingDirectory": "${workspaceFolder}",
     "testMate.cpp.test.advancedExecutables": [
         {
             "cwd": "${workspaceFolder}",
@@ -113,26 +113,23 @@
                 "pattern": "{build,Build,BUILD,out,Out,OUT}/**/*{benchmark,test,Test,TEST}.exe",
                 "env": {
                     "PATH": "${os_env:PATH}${osPathEnvSep}${relDirpath}",
-                    "TRACY_NO_INVARIANT_CHECK": 1
+                    "TRACY_NO_INVARIANT_CHECK": "1"
                 }
             },
             "linux": {
                 "pattern": "{build,Build,BUILD,out,Out,OUT}/**/*{benchmark,test,Test,TEST}",
                 "env": {
                     "LD_LIBRARY_PATH": "${relDirpath}",
-                    "TRACY_NO_INVARIANT_CHECK": 1,
+                    "TRACY_NO_INVARIANT_CHECK": "1",
                     "SDL_VIDEODRIVER": "wayland"
                 }
             },
         }
     ],
-    "testMate.cpp.log.logpanel": true,
+    "testMate.cpp.log.logpanel": false,
     "testMate.cpp.debug.configTemplate": {
-        "type": "cppvsdbg",
         "linux": {
-            "type": "cppdbg",
-            "MIMode": "gdb",
-            "miDebuggerPath": "/usr/bin/gdb",
+            "type": "lldb",
         },
         "darwin": {
             "type": "cppdbg",
@@ -161,5 +158,6 @@
         "spdlog",
         "WINDOWEVENT",
         "WINDOWPOS"
-    ]
+    ],
+    "testMate.cpp.test.parallelExecutionLimit": 8
 }
