--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -146,16 +146,32 @@
         "sourceFileMap": "${sourceFileMapObj}",
     },
     "cSpell.words": [
+        "cbuffer",
+        "DXGI",
         "HIGHDPI",
+        "hinstance",
         "hitagi",
+        "HWND",
         "IBEAM",
+        "mipmap",
         "NESW",
+        "readback",
+        "RSDEF",
+        "Sfloat",
         "SIZEALL",
         "SIZENESW",
         "SIZENS",
         "SIZENWSE",
         "SIZEWE",
+        "SNORM",
         "spdlog",
+        "STREQ",
+        "subresource",
+        "Swapchain",
+        "SYSWM",
+        "Taskflow",
+        "Ufloat",
+        "vsync",
         "WINDOWEVENT",
         "WINDOWPOS"
     ],
