--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -147,14 +147,17 @@
     },
     "cSpell.words": [
         "cbuffer",
+        "CLSID",
         "DXGI",
         "HIGHDPI",
         "hinstance",
         "hitagi",
+        "HRESULT",
         "HWND",
         "IBEAM",
         "mipmap",
         "NESW",
+        "Qembed",
         "readback",
         "RSDEF",
         "Sfloat",
@@ -165,6 +168,8 @@
         "SIZEWE",
         "SNORM",
         "spdlog",
+        "SPIR",
+        "spirv",
         "STREQ",
         "subresource",
         "Swapchain",
