🚧 refactor DirectX 12 device

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -150,25 +150,35 @@
         "bindless",
         "bugprone",
         "cbuffer",
+        "cbvs",
         "CLSID",
         "cppcoreguidelines",
+        "Descs",
         "DXGI",
         "dxil",
+        "fspv",
         "HIGHDPI",
         "hinstance",
         "hitagi",
         "HRESULT",
         "HWND",
         "IBEAM",
+        "IDXGI",
+        "LINELIST",
+        "LINESTRIP",
+        "LPCSTR",
         "mipmap",
         "Multisample",
         "NESW",
         "nodiscard",
+        "POINTLIST",
         "Qembed",
         "readback",
+        "RLDO",
         "RSDEF",
         "Sfloat",
         "SHAREDEXP",
+        "SINGLETHREADED",
         "SIZEALL",
         "SIZENESW",
         "SIZENS",
@@ -178,12 +188,20 @@
         "spdlog",
         "SPIR",
         "spirv",
+        "STENCILOP",
         "STREQ",
         "subresource",
+        "Subresources",
         "Swapchain",
+        "Swapchains",
         "SYSWM",
         "Taskflow",
+        "TEXTURECUBE",
+        "TEXTURECUBEARRAY",
+        "TRIANGLELIST",
+        "TRIANGLESTRIP",
         "TYPELESS",
+        "uavs",
         "Ufloat",
         "Viewports",
         "vsync",
