--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -196,6 +196,7 @@
         "Swapchains",
         "SYSWM",
         "Taskflow",
+        "TEXCOORD",
         "TEXTURECUBE",
         "TEXTURECUBEARRAY",
         "TRIANGLELIST",
