♻️ refactor module manage and execution order

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -169,6 +169,7 @@
         "fspv",
         "graaf",
         "GTEST",
+        "Hasklig",
         "HIGHDPI",
         "hinstance",
         "hitagi",
@@ -191,6 +192,7 @@
         "Multisample",
         "NESW",
         "nodiscard",
+        "Noto",
         "Phong",
         "POINTLIST",
         "Qembed",
