♻️ refactor ecs interface

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -181,6 +181,7 @@
         "IDXGI",
         "indegree",
         "Indexs",
+        "initializable",
         "ISPC",
         "lightmap",
         "LINELIST",
